# test-make

./: LICENSE  Makefile.in  configure.ac
lib/: config.rb.in  fijiconfig.rb  testharness.rb  testlib.rb
libexec/: summarize  testmake
